syntax = "proto3";

package calculatorpb;

option go_package = "calculator/calculatorpb";

service Calculator {
  rpc Sum (SumRequest) returns (SumResponse) {}
  rpc Sub (SubRequest) returns (SubResponse) {}
  rpc Mul (MulRequest) returns (MulResponse) {}
  rpc Div (DivRequest) returns (DivResponse) {}
}

message SumRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message SumResponse {
  int32 sum_result = 1;
}

message SubRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message SubResponse {
  int32 sub_result = 1;
}

message MulRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message MulResponse {
  int32 mul_result = 1;
}

message DivRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message DivResponse {
  int32 div_result = 1;
}